--- a/e2x.html
+++ b/e2x.html
@@ -1,5 +1,4 @@
-<source>
-<app class="js">import React,{component}from'react';
+import React,{component}from'react';
     import'./APR.css';
     class counter extends component{
         consumer(props){
